--- a/.github/linters/.eslintrc.yaml
+++ b/.github/linters/.eslintrc.yaml
@@ -23,7 +23,7 @@ globals:
 ###############
 # Parser vars #
 ###############
-parser: '@typescript-eslint/parser'
+parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
@@ -32,7 +32,7 @@ parserOptions:
 # Plugins #
 ###########
 plugins:
-  - '@typescript-eslint'
+  - "@typescript-eslint"
   - prettier
 
 ###########
@@ -45,7 +45,6 @@ extends:
 # Overrides for JSON parsing #
 ##############################
 overrides:
-
   # JSON files
   - files:
       - "*.json"
