--- a/workflows/generic/publish_docker.yaml
+++ b/workflows/generic/publish_docker.yaml
@@ -1,26 +1,53 @@
 ---
-name: Lint
+name: Publish Docker
 
 "on":
   workflow_call:
+    inputs:
+      image-name:
+        required: true
+        type: string
+      image-version:
+        required: true
+        type: string
+      cache-path:
+        required: true
+        type: string
+      cache-key:
+        required: true
+        type: string
     secrets:
       github-token:
         required: true
 
 jobs:
-  label-pr:
-    runs_on: ubuntu-latest
+  lint:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - name: Label PR
-        id: label_pr
-        uses: release-drafter/release-drafter@v5
+      - uses: actions/cache@v5
         with:
-          config-name: release-drafter.yaml
-          publish: false
-          disable-releaser: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.github-token }}
+          path: ${{ inputs.cache-path }}
+          key: ${{ inputs.cache-key }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Github Packages
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.github-token }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          context: .
+          push: true
+          tags: ${{ inputs.image-name }}:${{ inputs.image-version }}
