--- a/workflows/java/on_pull_request.yaml
+++ b/workflows/java/on_pull_request.yaml
@@ -17,14 +17,19 @@ name: Pull Request
 jobs:
   check-pr-source-branch:
     uses: superbestfriends/github-workflow-repo/workflows/generic/check_pr_source_branch.yaml@v1
+    secrets: inherit
+    with:
+      source-branch: ${{ github.head_ref }}
 
   lint:
     needs: check-pr-source-branch
     uses: superbestfriends/github-workflow-repo/workflows/generic/lint.yaml@v1
+    secrets: inherit
 
   label-pr:
     needs: lint
     uses: superbestfriends/github-workflow-repo/workflows/generic/label_pr.yaml@v1
+    secrets: inherit
 
   test:
     needs: label-pr
@@ -70,7 +75,7 @@ jobs:
           path: target
           key: ${{ github.run_id }}
 
-      - run: mvn --batch-mode package
+      - run: mvn --batch-mode package -DskipTests
 
   publish:
     needs: package
@@ -96,32 +101,9 @@ jobs:
   publish-docker:
     if: ${{ inputs.docker-build }}
     needs: package
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/cache@v5
-        with:
-          path: target
-          key: ${{ github.run_id }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Github Packages
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.github-token }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          context: .
-          push: true
-          tags: ${{ needs.package.outputs.name }}:${{ needs.package.outputs.version }}
+    uses: superbestfriends/github-workflow-repo/workflows/generic/publish-docker.yaml@v1
+    with:
+      image-name: ${{ needs.package.outputs.name }}
+      image-version: ${{ needs.package.outputs.version }}
+      cache-path: target
+      cache-key: ${{ github.run_id }}
