--- a/workflows/utils/publish_docker.yaml
+++ b/workflows/utils/publish_docker.yaml
@@ -21,7 +21,7 @@ name: Publish Docker
         required: true
 
 jobs:
-  lint:
+  publish-docker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -44,7 +44,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.github-token }}
 
-      - name: Build and push
+      - name: Publish Docker Image
         uses: docker/build-push-action@v4
         with:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
