--- a/.github/workflows/reusable/workflows/utils/label_pr.yaml
+++ b/.github/workflows/reusable/workflows/utils/label_pr.yaml
@@ -9,7 +9,7 @@ name: Label PR
 
 jobs:
   label-pr:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
