--- a/.github/workflows/reusable/workflows/generic/on_push_main.yaml
+++ b/.github/workflows/reusable/workflows/generic/on_push_main.yaml
@@ -4,8 +4,12 @@ name: Push Main - Generic
 "on":
   workflow_call:
     outputs:
-      version: ${{ jobs.draft-release.outputs.version }}
-      release-candidate-version: ${{jobs.draft-release.outputs.version}}-RC${{ jobs.derive-release-candidate-version.outputs.version }}
+      version:
+        description: The version of the pending release
+        value: ${{ jobs.draft-release.outputs.version }}
+      release-candidate-version:
+        description: The version of this release candidate
+        value: ${{jobs.draft-release.outputs.version}}-RC${{ jobs.derive-release-candidate-version.outputs.version }}
     secrets:
       github-token:
         required: true
@@ -40,11 +44,12 @@ jobs:
           fetch-depth: 0
 
       # takes the number of commits on main since the last tag
-      - name: derive-release-candidate-version
-        run: git rev-list $(git describe --tags --abbrev=0)..HEAD --count
+      - name: Derive Release Candidate Version
+        id: derive-release-candidate-version
+        run: git rev-list "$(git describe --tags --abbrev=0)"..HEAD --count
 
   lint:
     needs: draft-release
     if: needs.draft-release.result == 'success'
-    uses: superbestfriends/github-workflow-repo/workflows/utils/lint.yaml@v1
+    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/utils/lint.yaml@v1
     secrets: inherit
