--- a/.github/workflows/reusable/workflows/generic/on_release.yaml
+++ b/.github/workflows/reusable/workflows/generic/on_release.yaml
@@ -4,25 +4,29 @@ name: On Release - Generic
 "on":
   workflow_call:
     outputs:
-      next-version: ${{ jobs.release.outputs.next-version }}
+      next-version:
+        description: The next version after this release
+        value: ${{ jobs.release.outputs.next-version }}
     secrets:
       github-token:
         required: true
 
 jobs:
   lint:
-    uses: superbestfriends/github-workflow-repo/workflows/utils/lint.yaml@v1
+    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/utils/lint.yaml@v1
     secrets: inherit
 
   release:
     needs: lint
     if: needs.lint.result == 'success'
+    runs-on: ubuntu-latest
     outputs:
       next-version: ${{ steps.release.outputs.name }}
     steps:
       - uses: actions/checkout@v3
 
-      - name: release
+      - name: Release
+        id: release
         uses: release-drafter/release-drafter@v5
         with:
           config-name: release-drafter.yaml
