Update internal references to point at main

--- a/.github/workflows/on_push_main_generic.yaml
+++ b/.github/workflows/on_push_main_generic.yaml
@@ -51,5 +51,5 @@ jobs:
   lint:
     needs: draft-release
     if: needs.draft-release.result == 'success'
-    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/utils/lint.yaml@v1
+    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/utils/lint.yaml@main
     secrets: inherit
