--- a/.github/workflows/on_push_main.yaml
+++ b/.github/workflows/on_push_main.yaml
@@ -8,4 +8,4 @@ name: Push Main
 
 jobs:
   on-push-main:
-    uses: superbestfriends/github-workflow-repo/.github/workflows/on_push_main_generic.yaml@v1
+    uses: superbestfriends/github-workflow-repo/.github/workflows/on_push_main_generic.yaml@main
