--- a/.github/workflows/on_release_generic.yaml
+++ b/.github/workflows/on_release_generic.yaml
@@ -13,7 +13,7 @@ name: On Release - Generic
 
 jobs:
   lint:
-    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/utils/lint.yaml@v1
+    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/utils/lint.yaml@main
     secrets: inherit
 
   release:
