--- a/.github/workflows/on_pull_request.yaml
+++ b/.github/workflows/on_pull_request.yaml
@@ -12,4 +12,8 @@ name: Pull Request
 
 jobs:
   on-pull-request:
-    uses: superbestfriends/github-workflow-repo/.github/workflows/on_pull_request_generic.yaml@main
+    uses: ./.github/workflows/on_pull_request_generic.yaml
+    secrets:
+      github-token: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      source-branch: ${{ github.head_ref }}
