--- a/.github/workflows/on_push_main_generic.yaml
+++ b/.github/workflows/on_push_main_generic.yaml
@@ -51,5 +51,5 @@ jobs:
   lint:
     needs: draft-release
     if: needs.draft-release.result == 'success'
-    uses: ./.github/workflows/reusable/workflows/utils/lint.yaml
+    uses: ./.github/workflows/lint.yaml
     secrets: inherit
