--- a/.github/workflows/on_release_java.yaml
+++ b/.github/workflows/on_release_java.yaml
@@ -16,13 +16,13 @@ name: On Release - Java
 
 jobs:
   generic:
-    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/generic/on_release.yaml@main
+    uses: ./.github/workflows/on_release_generic.yaml
     secrets: inherit
 
   build_and_publish:
     needs: generic
     if: needs.generic.result == 'success'
-    uses: superbestfriends/github-workflow-repo/.github/workflows/reusable/workflows/java/build_and_publish.yaml@main
+    uses: ./.github/workflows/build_and_publish_java.yaml
     secrets: inherit
     with:
       version: ${{ inputs.release-name }}
