--- a/.github/workflows/check_pr_source_branch.yaml
+++ b/.github/workflows/check_pr_source_branch.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           github-token: ${{ secrets.github-token }}
           script: |
-            const sourceBranch = ${{ inputs.source-branch }}
+            const sourceBranch = '${{ inputs.source-branch }}';
             if (!sourceBranch.startsWith("hotfix/") && !sourceBranch.startsWith("feature/")) {
               core.setFailed(`Source branch name must start with "hotfix/" or "feature/", but it was "${sourceBranch}"`);
             }
