--- a/.github/workflows/on_release_java.yaml
+++ b/.github/workflows/on_release_java.yaml
@@ -4,28 +4,28 @@ name: On Release - Java
 "on":
   workflow_call:
     inputs:
-      docker-build:
-        type: boolean
-        default: true
       release-name:
         type: string
         required: true
+      docker-build:
+        type: boolean
+        default: true
     secrets:
       github-token:
         required: true
 
 jobs:
-  generic:
-    uses: ./.github/workflows/on_release_generic.yaml
+  base:
+    uses: ./.github/workflows/on_release_base.yaml
     secrets: inherit
 
   build_and_publish:
-    needs: generic
-    if: needs.generic.result == 'success'
+    needs: base
+    if: needs.base.result == 'success'
     uses: ./.github/workflows/build_and_publish_java.yaml
     secrets: inherit
     with:
       version: ${{ inputs.release-name }}
-      next-version: ${{ needs.generic.outputs.next-version }}-SNAPSHOT
+      next-version: ${{ needs.base.outputs.next-version }}-SNAPSHOT
       docker-build: ${{ inputs.docker-build }}
       run-tests: false
