--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -11,10 +11,10 @@ name: Publish Docker
         required: true
         type: string
       cache-path:
-        required: true
+        required: false
         type: string
       cache-key:
-        required: true
+        required: false
         type: string
     secrets:
       github-token:
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: actions/cache@v5
+        if: inputs.cache-path != '' && inputs.cache-key != ''
         with:
           path: ${{ inputs.cache-path }}
           key: ${{ inputs.cache-key }}
