--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -51,4 +51,4 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           context: .
           push: true
-          tags: ${{ github.repository_owner }}/${{ inputs.image-name }}:${{ inputs.image-version }}
+          tags: ghcr.io/${{ github.repository_owner }}/${{ inputs.image-name }}:${{ inputs.image-version }}
