--- a/.github/workflows/check_pr_source_branch.yaml
+++ b/.github/workflows/check_pr_source_branch.yaml
@@ -22,7 +22,7 @@ jobs:
           github-token: ${{ secrets.github-token }}
           script: |
             const sourceBranch = '${{ inputs.source-branch }}';
-            if (!sourceBranch.startsWith("hotfix/") && !sourceBranch.startsWith("feature/")) {
+            if (!sourceBranch.startsWith("hotfix/") && !sourceBranch.startsWith("feature/") && !sourceBranch.startsWith("renovate/")) {
               core.setFailed(`Source branch name must start with "hotfix/" or "feature/", but it was "${sourceBranch}"`);
             }
 
